--- a/src/app/features/modals/settings/rclone-config-modal/rclone-config-modal.component.html
+++ b/src/app/features/modals/settings/rclone-config-modal/rclone-config-modal.component.html
@@ -173,7 +173,7 @@
             [attr.aria-label]="'modals.rcloneConfig.reset.aria' | translate"
           >
             @if (isResetting()) {
-              <mat-spinner diameter="16" class="inline-spinner"></mat-spinner>
+              <mat-spinner diameter="16"></mat-spinner>
             } @else {
               <mat-icon svgIcon="rotate-left"></mat-icon>
             }
