--- a/src/app/features/modals/remote-management/quick-add-remote/quick-add-remote.component.html
+++ b/src/app/features/modals/remote-management/quick-add-remote/quick-add-remote.component.html
@@ -2,7 +2,7 @@
   <div class="modal-header" data-tauri-drag-region>
     <button>
       <mat-icon
-        [svgIcon]="iconService.getIconName(quickAddForm.get('setup.remoteType')?.value)"
+        [svgIcon]="iconService.getIconName(quickAddForm.get('setup.type')?.value)"
       ></mat-icon>
     </button>
     <p>{{ 'modals.quickAdd.title' | translate }}</p>
@@ -15,88 +15,15 @@
     <div class="modal-content custom-scrollbar">
       @switch (currentStep()) {
         @case ('setup') {
-          <div class="step-content" formGroupName="setup">
-            <!-- Remote Type Selection -->
-            <div class="section-group">
-              <h3 class="section-label">{{ 'modals.quickAdd.selectType' | translate }}</h3>
-              <mat-form-field appearance="fill" class="remote-type-field">
-                <mat-label>{{ 'modals.quickAdd.searchLabel' | translate }}</mat-label>
-                <mat-icon matPrefix svgIcon="server" class="field-icon"></mat-icon>
-                <input
-                  matInput
-                  type="text"
-                  [formControl]="remoteTypeSearchControl"
-                  [matAutocomplete]="remoteTypeAuto"
-                  [placeholder]="'modals.quickAdd.searchPlaceholder' | translate"
-                />
-                <mat-autocomplete
-                  #remoteTypeAuto="matAutocomplete"
-                  [displayWith]="displayRemoteType.bind(this)"
-                  (optionSelected)="onRemoteTypeSelected($event)"
-                  class="remote-type-autocomplete"
-                >
-                  @for (remote of filteredRemoteTypes(); track remote.value) {
-                    <mat-option [value]="remote.value" class="remote-option">
-                      <div class="remote-option-content">
-                        <mat-icon
-                          [svgIcon]="iconService.getIconName(remote.value)"
-                          class="remote-icon"
-                        ></mat-icon>
-                        <div class="remote-text">
-                          <span class="remote-label">{{ remote.label }}</span>
-                          <span class="remote-value">{{ remote.value }}</span>
-                        </div>
-                      </div>
-                    </mat-option>
-                  }
-                </mat-autocomplete>
-                @if (
-                  quickAddForm.get('setup.remoteType')?.hasError('required') &&
-                  quickAddForm.get('setup.remoteType')?.touched
-                ) {
-                  <mat-error>{{
-                    'modals.quickAdd.errors.remoteTypeRequired' | translate
-                  }}</mat-error>
-                }
-              </mat-form-field>
-            </div>
-
-            <!-- Configuration Section -->
-            <div class="section-group config-section">
-              <div class="form-row">
-                <mat-form-field appearance="fill">
-                  <mat-label>{{ 'modals.quickAdd.remoteName' | translate }}</mat-label>
-                  <mat-icon matPrefix svgIcon="cloud" class="field-icon"></mat-icon>
-                  <input
-                    matInput
-                    formControlName="remoteName"
-                    [placeholder]="'modals.quickAdd.remoteNamePlaceholder' | translate"
-                    required
-                    type="text"
-                  />
-                  @if (quickAddForm.get('setup.remoteName')?.hasError('required')) {
-                    <mat-error>{{
-                      'modals.quickAdd.errors.remoteNameRequired' | translate
-                    }}</mat-error>
-                  }
-                  @if (quickAddForm.get('setup.remoteName')?.hasError('nameTaken')) {
-                    <mat-error>{{ 'modals.quickAdd.errors.nameTaken' | translate }}</mat-error>
-                  }
-                </mat-form-field>
-              </div>
-
-              <div class="interactive-option">
-                <div class="option-info">
-                  <span class="option-title">{{
-                    'modals.quickAdd.interactive.title' | translate
-                  }}</span>
-                  <p class="option-desc">
-                    {{ 'modals.quickAdd.interactive.description' | translate }}
-                  </p>
-                </div>
-                <mat-slide-toggle formControlName="useInteractiveMode"> </mat-slide-toggle>
-              </div>
-            </div>
+          <div class="step-content">
+            <app-remote-config-step
+              [form]="$any(quickAddForm.get('setup'))"
+              [remoteTypes]="remoteTypes"
+              [existingRemotes]="existingRemotes"
+              [useInteractiveMode]="quickAddForm.get('setup.useInteractiveMode')?.value"
+              [showAdvancedToggle]="false"
+              (interactiveModeToggled)="onInteractiveModeToggled($event)"
+            />
           </div>
         }
 
@@ -118,9 +45,7 @@
                         <app-operation-config
                           [opFormGroup]="$any(quickAddForm.get('operations.' + tab.type))"
                           [operationType]="tab.type"
-                          [currentRemoteName]="
-                            quickAddForm.get('setup.remoteName')?.value || 'remote'
-                          "
+                          [currentRemoteName]="quickAddForm.get('setup.name')?.value || 'remote'"
                           [existingRemotes]="existingRemotes"
                           [description]="tab.description | translate"
                           (destFolderSelected)="selectFolder(tab.type, 'dest')"
